Add Convex integration and update backend URL to Render

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ ADMIN_TOKEN=change-this-to-a-secure-random-token
 
 # Bot Configuration
 MENTION_CHUNK_SIZE=25
+
+# Convex Integration (for dashboard logging)
+CONVEX_URL=https://hushed-crow-831.convex.cloud
+CONVEX_DEPLOY_KEY=your_convex_deploy_key_here
