--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nanoid": "^5.0.7",
+    "node-fetch": "^2.7.0",
     "pino": "^9.3.2",
     "qrcode": "^1.5.4",
     "vite": "^6.4.1",
