Clean up: Remove unused files and old UI

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 # Server Configuration
 PORT=3000
 
-# Security (Recommended for production)
+# Security (Required for API authentication)
 ADMIN_TOKEN=change-this-to-a-secure-random-token
 
 # Bot Configuration
 MENTION_CHUNK_SIZE=25
 
-# Convex Integration (for dashboard logging)
+# Convex Integration (for real-time dashboard logging)
 CONVEX_URL=https://hushed-crow-831.convex.cloud
-CONVEX_DEPLOY_KEY=your_convex_deploy_key_here
+CONVEX_DEPLOY_KEY=dev:hushed-crow-831|your-deploy-key-here
+
+# Render Deployment Flag
+RENDER=true
